squash! some adjust and readme

--- a/README.org
+++ b/README.org
@@ -17,6 +17,7 @@
 - SpringBoot 3.0
 - Spring Security
 - Spring Data JPA
+- Spring Validation
 - MySQL
 - Kotlin
 
@@ -195,9 +196,8 @@
 
 这里你需要更改 =location /= 这里的 =root= 选项，把他改为 *前端的 dist* 目录
 ** 后端
-build package
-
-run package
+这个你用IDEA打开 =backend= 项目，在IDEA里运行 =BackendApplication.main()= 方法就行了
+为什么这样呢，因为我不会 build 这个项目，先这样凑合着吧
 ** 前端
 进入前端目录，执行 =yarn build=
 
